- changed dropdown button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
       <nav>
         <img src="./images/logo.png" alt="billspotter logo" />
         <p><span>Bill</span>Spotter</p>
-        <button>dropdown</button>
+        <button>
+          <hr />
+          <hr />
+          <hr />
+        </button>
       </nav>
     </header>
 
