--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       </nav>
     </header>
 
-    <section>
+    <section id="splash">
       <h1>Keep Track of Your Bills and Payments!</h1>
       <hr />
       <ul>
