--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     />
     <link rel="stylesheet" href="./splash.css" />
   </head>
+
   <body>
     <header>
       <nav>
@@ -22,17 +23,21 @@
     </header>
 
     <section id="splash">
-      <h1>Keep Track of Your Bills and Payments!</h1>
-      <hr />
-      <ul>
-        <li>No linking of accounts required!</li>
-        <li>100% FREE!</li>
-        <li>Sign up is easy and anonymous!</li>
-      </ul>
+      <div id="intro">
+        <h1>Keep Track of Your Bills and Payments!</h1>
+        <hr />
+        <ul>
+          <li>No linking of accounts required!</li>
+          <li>100% FREE!</li>
+          <li>Sign up is easy and anonymous!</li>
+        </ul>
+      </div>
 
       <a href="./signup.html">Get Started!</a>
-      <a href="#about">About</a>
-      <a href="#features">Features</a>
+      <div id="link_row">
+        <a href="#about">About</a>
+        <a href="#features">Features</a>
+      </div>
     </section>
   </body>
 </html>
