- arranged link buttons

--- a/index.html
+++ b/index.html
@@ -33,8 +33,10 @@
         </ul>
       </div>
 
-      <a href="./signup.html">Get Started!</a>
-      <div id="link_row">
+      <div id="link_row_1">
+        <a href="./signup.html">Get Started!</a>
+      </div>
+      <div id="link_row_2">
         <a href="#about">About</a>
         <a href="#features">Features</a>
       </div>
