--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       content="A simple and easy to use web-app designed to make keeping track of bills a breeze!"
     />
     <link rel="stylesheet" href="./splash.css" />
+    <link rel="stylesheet" href="./animate.css" />
   </head>
 
   <body>
@@ -22,7 +23,7 @@
       </nav>
     </header>
 
-    <section id="splash">
+    <div id="splash">
       <div id="intro">
         <h1>Keep Track of Your Bills and Payments!</h1>
         <hr />
@@ -40,6 +41,16 @@
         <a href="#about">About</a>
         <a href="#features">Features</a>
       </div>
+    </div>
+
+    <section id="about">
+      <h1>About</h1>
     </section>
+
+    <section id="features">
+      <h1>Features</h1>
+    </section>
+
+    <script type="module" src="index.js"></script>
   </body>
 </html>
