--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
       name="description"
       content="A simple and easy to use web-app designed to make keeping track of bills a breeze!"
     />
+    <link rel="stylesheet" href="./common.css" />
     <link rel="stylesheet" href="./splash.css" />
+    <link rel="stylesheet" href="./about.css" />
     <link rel="stylesheet" href="./animate.css" />
   </head>
 
@@ -44,7 +46,20 @@
     </div>
 
     <section id="about">
-      <h1>About</h1>
+      <h1>Bill tracking made simple</h1>
+      <p>
+        Bill Spotter is a simple and easy to use web-app designed make keeping
+        track of bills a breeze! Bill Spotter works like a smart-checklist,
+        allowing you to enter your bills once and then, upon confirming a bill
+        has been a paid, a new bill will automatically be generated for the next
+        occurrence! Bill Spotter was designed with ease of use and anonymity in
+        mind. Therefore it does not require any sensitive information or linking
+        of other accounts, a username and password is all that is needed to
+        start! What are you waiting for? Start keeping track of your bills
+        today!
+      </p>
+
+      <a href="./signup.html">Get Started</a>
     </section>
 
     <section id="features">
