--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -6,16 +6,16 @@
       name="description"
       content="A simple and easy to use web-app designed to make keeping track of bills a breeze!"
     />
-    <link rel="stylesheet" href="./common.css" />
-    <link rel="stylesheet" href="./splash.css" />
-    <link rel="stylesheet" href="./about.css" />
-    <link rel="stylesheet" href="./animate.css" />
+    <link rel="stylesheet" href="./css/common.css" />
+    <link rel="stylesheet" href="./css/splash.css" />
+    <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/animate.css" />
   </head>
 
   <body>
     <header>
       <nav>
-        <img src="./images/logo.png" alt="billspotter logo" />
+        <img src="../../images/logo.png" alt="billspotter logo" />
         <p><span>Bill</span>Spotter</p>
         <button>
           <hr />
@@ -68,6 +68,6 @@
       <h1>Features</h1>
     </section>
 
-    <script type="module" src="index.js"></script>
+    <script type="module" src="./js/index.js"></script>
   </body>
 </html>
