- made logo a link also

--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -16,7 +16,7 @@
     <header>
       <nav>
         <img src="../../images/logo.png" alt="billspotter logo" />
-        <p><span>Bill</span>Spotter</p>
+        <a href="#home"><span>Bill</span>Spotter</a>
         <button>
           <hr />
           <hr />
@@ -37,11 +37,11 @@
       </div>
 
       <div id="link_row_1">
-        <a href="./signup.html">Get Started!</a>
+        <a href="./signup.html" class="link_button">Get Started!</a>
       </div>
       <div id="link_row_2">
-        <a href="#about">About</a>
-        <a href="#features">Features</a>
+        <a href="#about" class="link_button">About</a>
+        <a href="#features" class="link_button">Features</a>
       </div>
     </div>
 
@@ -68,7 +68,7 @@
         </p>
       </div>
 
-      <a href="./signup.html">Get Started</a>
+      <a href="./signup.html" class="link_button">Get Started</a>
     </section>
 
     <section id="features">
