- added close button

--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -46,6 +46,7 @@
     </div>
 
     <section id="about">
+      <a href="#home" class="close_button">X</a>
       <div>
         <h1>Bill tracking made simple</h1>
         <p>
