- modified close button

--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -46,8 +46,10 @@
     </div>
 
     <section id="about">
-      <a href="#home" class="close_button">X</a>
-      <div>
+      <div class="close">
+        <a href="#home">X</a>
+      </div>
+      <div class="bubble">
         <h1>Bill tracking made simple</h1>
         <p>
           Bill Spotter is a simple and easy to use web-app designed make keeping
