--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -17,11 +17,21 @@
       <nav>
         <img src="../../images/logo.png" alt="billspotter logo" />
         <a href="#home"><span>Bill</span>Spotter</a>
-        <button>
+        <button id="nav_btn">
           <hr />
           <hr />
           <hr />
         </button>
+        <ul id="nav_dropdown">
+          <hr />
+          <li>item 1</li>
+          <li>item 2</li>
+          <li>item 3</li>
+          <hr />
+          <li>item 4</li>
+          <li>item 5</li>
+          <hr />
+        </ul>
       </nav>
     </header>
 
