--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -24,13 +24,14 @@
         </button>
         <ul id="nav_dropdown">
           <hr />
-          <li>item 1</li>
-          <li>item 2</li>
-          <li>item 3</li>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#features">Features</a></li>
           <hr />
-          <li>item 4</li>
-          <li>item 5</li>
+          <li><a href="../signup/index.html">Sign Up</a></li>
+          <li><a href="../app/index.html">Login</a></li>
           <hr />
+          <li><a href="#">Terms</a></li>
         </ul>
       </nav>
     </header>
