- added features content

--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -86,7 +86,22 @@
     </section>
 
     <section id="features">
-      <h1>Features</h1>
+      <div class="close">
+        <a href="#home">X</a>
+      </div>
+      <div class="bubble">
+        <h1>Highlighted Features</h1>
+        <ul>
+          <li>Simple and easy to use!</li>
+          <li>No personal information required!</li>
+          <li>Keep track of all your bill in one place!</li>
+          <li>Project expected monthly totals!</li>
+          <li>Calendar makes it easy to see which bills are due next!</li>
+          <li><strong>100% FREE</strong></li>
+        </ul>
+      </div>
+
+      <a href="./signup.html" class="link_button">Get Started</a>
     </section>
 
     <script type="module" src="./js/index.js"></script>
