--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="./css/common.css" />
     <link rel="stylesheet" href="./css/splash.css" />
     <link rel="stylesheet" href="./css/about.css" />
+    <link rel="stylesheet" href="./css/features.css" />
     <link rel="stylesheet" href="./css/animate.css" />
   </head>
 
