--- a/client/splash/index.html
+++ b/client/splash/index.html
@@ -6,11 +6,11 @@
       name="description"
       content="A simple and easy to use web-app designed to make keeping track of bills a breeze!"
     />
-    <link rel="stylesheet" href="./css/common.css" />
-    <link rel="stylesheet" href="./css/splash.css" />
-    <link rel="stylesheet" href="./css/about.css" />
-    <link rel="stylesheet" href="./css/features.css" />
-    <link rel="stylesheet" href="./css/animate.css" />
+    <link rel="stylesheet" href="../css/common.css" />
+    <link rel="stylesheet" href="../css/splash.css" />
+    <link rel="stylesheet" href="../css/about.css" />
+    <link rel="stylesheet" href="../css/features.css" />
+    <link rel="stylesheet" href="../css/animate.css" />
   </head>
 
   <body>
@@ -29,7 +29,7 @@
           <li><a href="#about">About</a></li>
           <li><a href="#features">Features</a></li>
           <hr />
-          <li><a href="../signup/index.html">Sign Up</a></li>
+          <li><a href="../signup/">Sign Up</a></li>
           <li><a href="../app/index.html">Login</a></li>
           <hr />
           <li><a href="#">Terms</a></li>
@@ -48,7 +48,7 @@
       </div>
 
       <div id="link_row_1">
-        <a href="./signup.html" class="link_button">Get Started!</a>
+        <a href="../signup/" class="link_button">Get Started!</a>
       </div>
       <div id="link_row_2">
         <a href="#about" class="link_button">About</a>
@@ -82,7 +82,7 @@
         </p>
       </div>
 
-      <a href="./signup.html" class="link_button">Get Started</a>
+      <a href="../signup/" class="link_button">Get Started</a>
     </section>
 
     <section id="features">
@@ -101,7 +101,7 @@
         </ul>
       </div>
 
-      <a href="./signup.html" class="link_button">Get Started</a>
+      <a href="../signup/" class="link_button">Get Started</a>
     </section>
 
     <script type="module" src="./js/index.js"></script>
