--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -48,6 +48,13 @@
           <label for="confirm_pass">Confirm Password</label>
           <input type="confirm_pass" id="confirm_pass" name="confirm_pass" />
 
+          <div>
+            <input type="checkbox" id="terms" name="terms" />
+            <label for="terms"
+              >I have read and agree to the Terms & Conditions.</label
+            >
+          </div>
+
           <input type="submit" name="submit" id="submit" />
         </form>
       </div>
