--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -43,13 +43,18 @@
           <input type="text" id="username" name="username" required />
 
           <label for="password">Password</label>
-          <input type="password" id="password" name="password" />
+          <input type="password" id="password" name="password" required />
 
           <label for="confirm_pass">Confirm Password</label>
-          <input type="confirm_pass" id="confirm_pass" name="confirm_pass" />
+          <input
+            type="confirm_pass"
+            id="confirm_pass"
+            name="confirm_pass"
+            required
+          />
 
           <div>
-            <input type="checkbox" id="terms" name="terms" />
+            <input type="checkbox" id="terms" name="terms" required />
             <label for="terms"
               >I have read and agree to the Terms & Conditions.</label
             >
