- added dashboard skeleton

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -39,11 +39,19 @@
     <div id="dashboard">
       <h1>Dashboard</h1>
 
-      <div id="calendar_container"></div>
+      <div id="calendar_container" class="bubble">
+        <h1>Calendar</h1>
+      </div>
 
-      <a href="#bills"></a>
-      <a href="#payments"></a>
-      <a href="#summary"></a>
+      <div id="shortcut_links">
+        <a href="#bills">Bills</a>
+        <a href="#payments">Payments</a>
+        <a href="#summary">Summary</a>
+      </div>
+
+      <div id="next_due" class="bubble">
+        <h1>Next Due Payments</h1>
+      </div>
     </div>
 
     <section id="bills">
