--- a/client/app/index.html
+++ b/client/app/index.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/animate.css" />
     <link rel="stylesheet" href="../css/dashboard.css" />
+    <link rel="stylesheet" href="../css/bills.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
 
   <body>
@@ -56,6 +59,36 @@
 
     <section id="bills">
       <h1>My Bills</h1>
+
+      <div class="dropdown">
+        <h2>Rent</h2>
+        <div class="contents">
+          <p>stuff</p>
+          <p>stuff</p>
+          <p>stuff</p>
+          <p>stuff</p>
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <h2>Rent</h2>
+        <div class="contents">
+          <p>stuff</p>
+          <p>stuff</p>
+          <p>stuff</p>
+          <p>stuff</p>
+        </div>
+      </div>
+
+      <div class="dropdown">
+        <h2>Rent</h2>
+        <div class="contents">
+          <p>stuff</p>
+          <p>stuff</p>
+          <p>stuff</p>
+          <p>stuff</p>
+        </div>
+      </div>
     </section>
 
     <section id="payments">
