- implemented calendar and next due on dashboard

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -54,6 +54,7 @@
 
       <div id="next_due" class="bubble">
         <h1>Next Due Payments</h1>
+        <div id="next_due_bills"></div>
       </div>
     </div>
 
@@ -88,7 +89,7 @@
           </div>
           <div>
             <h2>Frequency</h2>
-            <select id="bill_type">
+            <select id="bill_freq">
               <option value="monthly">Monthly</option>
               <option value="weekly">Weekly</option>
               <option value="annually">Annually</option>
