- finished payments page for now

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -68,6 +68,14 @@
 
     <section id="payments">
       <h1>Payments</h1>
+      <div id="due_payments_container" class="bubble">
+        <h1>Due Payments</h1>
+        <div id="due_payments"></div>
+      </div>
+      <div id="prev_payments_container" class="bubble">
+        <h1>Previous Payments</h1>
+        <div id="prev_payments"></div>
+      </div>
     </section>
 
     <section id="summary">
