- All pages functional with basic implementation.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../css/dashboard.css" />
     <link rel="stylesheet" href="../css/bills.css" />
     <link rel="stylesheet" href="../css/payments.css" />
+    <link rel="stylesheet" href="../css/summary.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
@@ -80,6 +81,27 @@
 
     <section id="summary">
       <h1>Month Summary</h1>
+      <div id="graph_container" class="bubble">
+        <h1>May - 2022</h1>
+        <div>stuff</div>
+      </div>
+      <div class="row">
+        <div id="categories_container" class="bubble">
+          <h1>Categories</h1>
+          <div></div>
+        </div>
+        <div id="totals_container" class="bubble">
+          <h1>Totals</h1>
+          <div id="total_due">
+            <h2>Total Due</h2>
+            <div></div>
+          </div>
+          <div id="total_paid">
+            <h2>Total Paid</h2>
+            <div></div>
+          </div>
+        </div>
+      </div>
     </section>
 
     <section id="edit_bill">
