- prepared backend for implementation

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -108,7 +108,7 @@
       <form id="edit_bill_form" class="bubble">
         <h1>Bill Details</h1>
         <h2>Bill Name</h2>
-        <input id="bill_name" />
+        <input id="bill_name" required/>
         <div class="row">
           <div>
             <h2>Type</h2>
@@ -133,11 +133,11 @@
         <div class="row">
           <div>
             <h2>Date Due</h2>
-            <input id="bill_date_due" type="date" />
+            <input id="bill_date_due" type="date" required/>
           </div>
           <div>
             <h2>Amount Due</h2>
-            <input id="bill_amt_due" type="number" />
+            <input id="bill_amt_due" type="number" required/>
           </div>
         </div>
       </form>
