--- a/client/app/index.html
+++ b/client/app/index.html
@@ -7,6 +7,7 @@
       content="A simple and easy to use web-app designed to make keeping track of bills a breeze!"
     />
 
+    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/animate.css" />
     <link rel="stylesheet" href="../css/dashboard.css" />
