--- a/client/app/index.html
+++ b/client/app/index.html
@@ -136,7 +136,7 @@
           <div class="row">
             <div>
               <h2>Date Due</h2>
-              <input id="bill_date_due" type="date" required/>
+              <input id="bill_due_date" type="date" required/>
             </div>
             <div>
               <h2>Amount Due</h2>
