--- a/client/app/index.html
+++ b/client/app/index.html
@@ -10,12 +10,12 @@
     <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
 
     
-    <link rel="stylesheet" href="../css/common.css" />
-    <link rel="stylesheet" href="../css/animate.css" />
-    <link rel="stylesheet" href="../css/dashboard.css" />
-    <link rel="stylesheet" href="../css/bills.css" />
-    <link rel="stylesheet" href="../css/payments.css" />
-    <link rel="stylesheet" href="../css/summary.css" />
+    <link rel="stylesheet" href="../../client/css/common.css" />
+    <link rel="stylesheet" href="../../client/css/animate.css" />
+    <link rel="stylesheet" href="../../client/css/dashboard.css" />
+    <link rel="stylesheet" href="../../client/css/bills.css" />
+    <link rel="stylesheet" href="../../client/css/payments.css" />
+    <link rel="stylesheet" href="../../client/css/summary.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
