- implemented login page

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -6,9 +6,17 @@
       name="description"
       content="A simple and easy to use web-app designed to make keeping track of bills a breeze!"
     />
+
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1"
+    />
+
     <link rel="stylesheet" href="../css/common.css" />
     <link rel="stylesheet" href="../css/animate.css" />
     <link rel="stylesheet" href="../css/signup.css" />
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
 
   <body>
@@ -23,9 +31,9 @@
         </button>
         <ul id="nav_dropdown">
           <hr />
-          <li><a href="#home">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#features">Features</a></li>
+          <li><a href="../splash/#home">Home</a></li>
+          <li><a href="../splash/#about">About</a></li>
+          <li><a href="../splash/#features">Features</a></li>
           <hr />
           <li><a href="../signup/">Sign Up</a></li>
           <li><a href="../app/index.html">Login</a></li>
