--- a/client/app/index.html
+++ b/client/app/index.html
@@ -204,7 +204,7 @@
       </div>
     </div>
 
-    <button id="back_button">Back</button>
+    <button class="back_button">Back</button>
 
     <script type="module" src="./js/index.js"></script>
   </body>
