- implemented basic security on front and back ends

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -46,7 +46,7 @@
     <div id="signup_container">
       <div class="bubble">
         <h1>New User Registration</h1>
-        <form method="post">
+        <form>
           <label for="username">Username</label>
           <input type="text" id="username" name="username" required />
 
@@ -55,7 +55,7 @@
 
           <label for="confirm_pass">Confirm Password</label>
           <input
-            type="confirm_pass"
+            type="password"
             id="confirm_pass"
             name="confirm_pass"
             required
