--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,7 +32,7 @@
         </button>
         <ul id="nav_dropdown">
           <hr />
-          <li><a href="#home">Home</a></li>
+          <li><a href="../signup/index.html">Home</a></li>
           <li><a href="#bills">My Bills</a></li>
           <li><a href="#payments">My Payments</a></li>
           <li><a href="#summary">Month Summary</a></li>
