- added form validation to sign up form

--- a/client/signup/index.html
+++ b/client/signup/index.html
@@ -49,9 +49,11 @@
         <form>
           <label for="username">Username</label>
           <input type="text" id="username" name="username" required />
+          <p id="username_feedback"></p>
 
           <label for="password">Password</label>
           <input type="password" id="password" name="password" required />
+          <p id="password_feedback"></p>
 
           <label for="confirm_pass">Confirm Password</label>
           <input
@@ -60,6 +62,7 @@
             name="confirm_pass"
             required
           />
+          <p id="confirm_pass_feedback"></p>
 
           <div>
             <input type="checkbox" id="terms" name="terms" required />
@@ -67,6 +70,7 @@
               >I have read and agree to the Terms & Conditions.</label
             >
           </div>
+          <p id="terms_feedback"></p>
 
           <input type="submit" name="submit" id="submit" />
         </form>
