--- a/client/app/index.html
+++ b/client/app/index.html
@@ -7,205 +7,21 @@
       content="A simple and easy to use web-app designed to make keeping track of bills a breeze!"
     />
 
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1">
+    <meta
+      name="viewport"
+      content="width=device-width, height=device-height, initial-scale=1"
+    />
 
-    
-    <link rel="stylesheet" href="../css/common.css" />
-    <link rel="stylesheet" href="../css/animate.css" />
-    <link rel="stylesheet" href="../css/dashboard.css" />
-    <link rel="stylesheet" href="../css/bills.css" />
-    <link rel="stylesheet" href="../css/payments.css" />
-    <link rel="stylesheet" href="../css/summary.css" />
+    <link rel="stylesheet" href="index.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   </head>
 
   <body>
-    <header>
-      <nav>
-        <img src="../../images/logo.png" alt="billspotter logo" />
-        <a href="#home"><span>Bill</span>Spotter</a>
-        <button id="nav_btn">
-          <hr />
-          <hr />
-          <hr />
-        </button>
-        <ul id="nav_dropdown">
-          <hr />
-          <li><a href="../signup/index.html">Home</a></li>
-          <li><a href="#bills">My Bills</a></li>
-          <li><a href="#payments">My Payments</a></li>
-          <li><a href="#summary">Month Summary</a></li>
-          <hr />
-          <li><a href="../support/#faq">FAQ</a></li>
-          <li><a href="../support/">Support</a></li>
-          <hr />
-          <li><a href="../splash/">Logout</a></li>
-        </ul>
-      </nav>
-    </header>
-    <div id="toast">hello</div>
+    <header></header>
+    <div id="background"></div>
+    <div id="app"></div>
 
-    <div id="dashboard">
-      <h1>Dashboard</h1>
-
-      <div id="calendar_container" class="bubble">
-        <h1>Calendar</h1>
-      </div>
-
-      <div id="shortcut_links">
-        <a href="#bills"><img src="../../images/bills_icon.svg" alt=""> Bills</a>
-        <a href="#payments"><img src="../../images/payments_icon.svg" alt=""> Payments</a>
-        <a href="#summary"><img src="../../images/summary_icon.svg" alt=""> Summary</a>
-      </div>
-
-      <div id="next_due" class="bubble">
-        <h1>Next Due Payments</h1>
-        <div id="next_due_bills"></div>
-      </div>
-
-      <section id="bills">
-        <h1>My Bills</h1>
-        <div id="bill_dropdowns"></div>
-        <div id="new_bill_btn"><h2>+ New Bill</h2></div>
-      </section>
-  
-      <section id="payments">
-        <h1>Payments</h1>
-        <div id="due_payments_container" class="bubble">
-          <h1>Due Payments</h1>
-          <div id="due_payments"></div>
-        </div>
-        <div id="prev_payments_container" class="bubble">
-          <h1>Previous Payments</h1>
-          <div id="prev_payments"></div>
-        </div>
-      </section>
-  
-      <section id="summary">
-        <h1>Month Summary</h1>
-        <div id="graph_container" class="bubble">
-          <h1>May - 2022</h1>
-          <div>stuff</div>
-        </div>
-        <div class="row">
-          <div id="categories_container" class="bubble">
-            <h1>Categories</h1>
-            <div></div>
-          </div>
-          <div id="totals_container" class="bubble">
-            <h1>Totals</h1>
-            <div id="total_due">
-              <h2>Total Due</h2>
-              <div></div>
-            </div>
-            <div id="total_paid">
-              <h2>Total Paid</h2>
-              <div></div>
-            </div>
-          </div>
-        </div>
-      </section>
-  
-      <section id="edit_bill">
-        <form id="edit_bill_form" class="bubble">
-          <h1>Bill Details</h1>
-          <h2>Bill Name</h2>
-          <input id="bill_name" required/>
-          <div class="row">
-            <div>
-              <h2>Type</h2>
-              <select id="bill_type">
-                <option value="home">Home</option>
-                <option value="auto">Auto</option>
-                <option value="medical">Medical</option>
-                <option value="other">Other</option>
-              </select>
-            </div>
-            <div>
-              <h2>Frequency</h2>
-              <select id="bill_freq">
-                <option value="monthly">Monthly</option>
-                <option value="weekly">Weekly</option>
-                <option value="annually">Annually</option>
-                <option value="bi-weekly">Bi-weekly</option>
-              </select>
-            </div>
-          </div>
-  
-          <div class="row">
-            <div>
-              <h2>Date Due</h2>
-              <input id="bill_due_date" type="date" required/>
-            </div>
-            <div>
-              <h2>Amount Due</h2>
-              <input id="bill_amt_due" type="number" required/>
-            </div>
-          </div>
-        </form>
-        <button id="save_changes_btn">Save Changes</button>
-      </section>
-  
-      <section id="payment_details">
-  
-          <form id="payment_form" class="bubble">
-            <h1>Payment&nbsp;Details</h1>
-            <div class="row">
-              <div>
-                <h2>Bill Name</h2>
-                <p id="pay_bill_name"></p>
-              </div>
-              <div>
-                <h2>Type</h2>
-                <p id="pay_type"></p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <h2>Date Due</h2>
-                <p id="pay_date_due"></p>
-              </div>
-              <div>
-                <h2>Amount Due</h2>
-                <p id="pay_amt_due"></p>
-              </div>
-            </div>
-            <div class="row">
-              <div>
-                <h2>Paid On</h2>
-                <label><input type="radio" id="radio_today" name="pay_date_paid" checked>Today</label>
-                <label><input type="radio" id="radio_other_date" name="pay_date_paid">Other Date:</label>
-                <input id="other_date" type="date" disabled>
-              </div>
-              <div>
-                <h2>Amount Paid</h2>
-                <label><input type="radio" id="radio_full_amt" name="pay_amt_paid" checked>Full Amount</label>
-                <label><input type="radio" id="radio_other_amt" name="pay_amt_paid">Other Amount:</label>
-                <input type="number" id="other_amt" disabled>
-              </div>
-            </div>
-            <input type="submit" id="confirm_payment_btn" value="Confirm Payment">
-          </form>
-  
-      </section>
-    </div>
-
-    
-
-    <div id="alert_container">
-      <div id="confirmation_alert" class="bubble">
-        <h1>Confirmation Alert</h1>
-        <p>Are you sure you would like to perform this action?</p>
-        <div>
-          <button id="alert_confirm">&#9745</button>
-          <button id="alert_dismiss">&#9746</button>
-        </div>
-      </div>
-    </div>
-
-    <button class="back_button">Back</button>
-
-    <script type="module" src="./js/index.js"></script>
+    <script type="module" src="./index.js"></script>
   </body>
 </html>
