--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,6 +12,8 @@
       content="width=device-width, height=device-height, initial-scale=1"
     />
 
+    <link rel="icon" type="image/x-icon" href="/images/logo.png" />
+
     <link rel="stylesheet" href="index.css" />
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
