--- a/client/app/index.html
+++ b/client/app/index.html
@@ -12,7 +12,7 @@
       content="width=device-width, height=device-height, initial-scale=1"
     />
 
-    <link rel="icon" type="image/x-icon" href="/images/logo.png" />
+    <link rel="icon" href="/images/logo.png" />
 
     <link rel="stylesheet" href="index.css" />
 
