- #3 implemented splash page

--- a/client/login/index.html
+++ b/client/login/index.html
@@ -23,7 +23,7 @@
     <header>
       <nav>
         <img src="../images/logo.svg" alt="Binoculars" />
-        <a href="#dashboard" class="heading"> <span>Bill</span>Spotter </a>
+        <a href="../splash/" class="heading"> <span>Bill</span>Spotter </a>
         <button class="navDropdownBtn">&#9776</button>
         <div class="navDropdownMenu collapsible">
             <hr>
@@ -39,7 +39,7 @@
     </header>
     <div id="background"></div>
     <div id="app">
-      <h1>Login</h1>
+      
     </div>
 
     <script type="module" src="./index.js"></script>
