- #4 implemented foundation of FAQ page. Still needs work.

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -32,7 +32,7 @@
           <a class="navDropdownItem" href="#payments">My&nbsp;Payments</a>
           <a class="navDropdownItem" href="#summary">Month&nbsp;Summary</a>
           <hr>
-          <a class="navDropdownItem" href="#faq">FAQ</a>
+          <a class="navDropdownItem" href="../faq/">FAQ</a>
           <a class="navDropdownItem" href="#support">Support</a>
           <hr>
           <a id="logout" class="navDropdownItem" href="../splash/">Logout</a>
