--- a/client/login/index.html
+++ b/client/login/index.html
@@ -31,7 +31,7 @@
             <a class="navDropdownItem" href="../signup/">Sign&nbsp;Up</a>
             <a class="navDropdownItem" href="../login/">Login</a>
             <hr>
-            <a class="navDropdownItem" href="#faq">FAQ</a>
+            <a class="navDropdownItem" href="../faq/">FAQ</a>
             <a class="navDropdownItem" href="#terms">Terms</a>
             <hr>
           </div>
